# 4iSafeCross

./: .dockerignore  .env.example  .gitignore  .gitlab-ci-docker.yml  .gitlab-ci-nuitka.yml  .gitlab-ci.yml  .gitlab-ci.yml.bak  4isafecross.logrotate  4isafecross.service  4isafecross.sh  CICD_COMPARISON.md  CYTHON_README.md  Dockerfile  FAILSAFE_MODE.md  GITHUB_ACTIONS_BUILD.md  GITLAB_CI_BUILD.md  INSTALL_SYSTEM_DEPS.md  KEYPOINT_FILTER_README.md  MOTION_DETECTION_README.md  NETBIRD_JETSON_CONF.md  POSE_DETECTION_README.md  README.md  README2.md  README_CACHE_FRAMES.md  REGISTRE_TRAITEMENTS_RGPD.md  alert_manager.py  app.py  bot_aiogram.py  cam_check.py  check-dummy-display.service  constants.py  detection_db.py  disable-autosuspend.sh  docker-compose.yml  inference.py  pyproject.toml  requirements.txt  set-poe-gpio.service  set_poe_gpio.sh  setup_cython.py  (+5 more)
.github/workflows/: build-linux-executable.yml
config/: config.ini  masks.ini  relay_positions.ini  zones.ini
dataset/: dataset.yaml
db/: detections.db
scripts/: 4isafecross  4isafecross.service  4isafecross.sh  collect_dataset.py  deploy-jetson.sh  test-build-local.sh
src/: alert_manager.py  bot_aiogram.py  camera_manager.py  collect_dataset.py  context_vehicle.py  inference.py  motion.py  pose_analyser.py  relay_pilot.py  test_alert_manager.py
static/css/: design_system.css  zone_editor.css
static/js/: zone_editor.js
templates/: index.html  mockup.html  preview.html  zone_editor.html
utils/: coco_classes.py  constants.py  utils.py  zone_writer.py
