[project]
name = "4isafecross"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.10.12"
dependencies = [
    "aiogram>=3.20.0.post0",
    "flask>=3.1.1",
    "gunicorn>=23.0.0",
    "opencv-python>=4.11.0.86",
    "psutil>=7.0.0",
    "pygobject<3.51.0",
    "requests>=2.32.3",
    "setuptools>=80.8.0",
    "waitress>=3.0.2",
    "yoctopuce>=2.1.6320",
]
