[project]
name = "4isafecross"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.10.12"
dependencies = [
    "aiogram>=3.20.0.post0",
    "flask>=3.1.1",
    "gunicorn>=23.0.0",
    "nuitka>=2.7.12",
    "opencv-python>=4.11.0.86",
    "psutil>=7.0.0",
    # pygobject nécessite libgirepository1.0-dev (apt) pour la compilation
    # Voir INSTALL_SYSTEM_DEPS.md pour les commandes complètes par plateforme
    "pygobject<3.51.0; platform_system != 'Windows'",
    "requests>=2.32.3",
    "setuptools>=80.8.0",
    "waitress>=3.0.2",
    "yoctopuce>=2.1.6320",
]
